--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,16 @@
 .navContainer{
     border: solid green;
-    width:1200px;
-    height: 200px;
+    width:100%;
+    height: 160px;
     display: flex;
     flex-direction: column;
 }
 .scrollContainer{
     border: solid teal;
-    width: 800px;
-    height: 100px;
+    width: 400px;
+    height: 20px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
-    margin-left: 400px;
+    margin-left: 78%;
 }
