--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,45 @@
-.navContainer{
+.headerConatiner{
     border: solid green;
     width:100%;
-    height: 160px;
+    height: 150px;
     display: flex;
     flex-direction: column;
+
 }
-.scrollContainer{
+.searchContainer{
     border: solid teal;
-    width: 400px;
-    height: 20px;
+    width: 100%;
+    height: 100px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
-    margin-left: 78%;
+    margin-left: 0%;
+    margin-top:250px;
+}
+
+.linkContainer{
+border: solid yellow;
+width: 100%;
+height: 100px;
+display: flex;
+justify-content: space-evenly;
+margin-top: 0%;
+padding-top: 2%;
+}
+#about{
+    border: solid brown;
+    height: 600px;
+    width: 100%;
+}
+#projects{
+    border: solid purple;
+
+    height: 600px;
+    width: 100%;
+}
+#contact{
+    border: solid pink;
+
+    height: 600px;
+    width: 100%;
 }
